# boilerplate-cpp-project

./: .gitignore  CMakeLists.txt
scripts/: rebuild.sh
src/: main.cpp
src/Log/: Log.cpp
src/logger/: logger.cpp  logger.h
src/math/: math.cpp  math.h
